first blog post, blog page fix, and scrapbook

--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -1,11 +1,12 @@
 ---
 title: My First Blog Post
-date: January 1, 2023
-description: An introduction to my blog and what to expect.
+date: 04/14/2025
+description: An introduction to my blog and what to expect
 ---
 
-Ever Since I was a jit I been legit gang. 
+Ever Since I was a jit I been legit. 
 
+This post is completely AI generated and just for testing markdown display.
 
 ## What to Expect
 
