blog layout change and bug fix

--- a/content/blog/first-post.mdx
+++ b/content/blog/first-post.mdx
@@ -4,62 +4,68 @@ date: 04/14/2025
 description: An introduction to my blog and what to expect
 ---
 
-Ever Since I was a jit I been legit. 
+> ⚠️ **Disclaimer**: This post is entirely AI-generated.  
 
-This post is completely AI generated and just for testing markdown display.
+im just using it to test out how Markdown renders on my blog, layout and styling.  
+dont take anything here too seriously
 
-## What to Expect
+## ✨ What This Is
 
-In this blog, you can expect:
+Welcome to my corner of the internet.
 
-- Tutorials on frontend development
-- Thoughts on design systems
-- Reviews of new tools and technologies
-- Personal projects and case studies
+This blog is a space for:
 
-## My Approach to Web Development
+1. 🧠 Deep thoughts
+2. 💻 Tech experiments
+3. 📓 Personal stories
+4. 🏀 Random interests
+5. 🤖 AI explorations
 
-I believe in clean, semantic code that is accessible to everyone. My projects are built with performance and user experience in mind, using modern technologies while ensuring backward compatibility.
+You’ll find a mix of projects, reflections, and probably some existential takes now and then. I don’t have it all figured out—but I *do* have a lot to say, and this is where I’ll say it.
 
-> Good design is as little design as possible. - Dieter Rams
+---
 
-### The Technologies I Love
+## 📌 What to Expect
 
-Currently, I'm excited about:
+Here’s what I’ll be writing about:
 
-1. Next.js and React server components
-2. Tailwind CSS for styling
-3. TypeScript for type safety
-4. Design systems for consistency
+#### 1. **Building Stuff**
 
-## Code Example
+> “Show me what you’ve built.” – Everyone in tech ever  
 
-Here's a simple React component using TypeScript:
+From personal websites to AI apps, I’ll be documenting the creative (and chaotic) process of making things.
 
-```tsx
-import { useState } from 'react';
+#### 2. **Thinking Aloud**
 
-type CounterProps = {
-  initialValue?: number;
-};
-
-const Counter = ({ initialValue = 0 }: CounterProps) => {
-  const [count, setCount] = useState(initialValue);
-  
-  return (
-    <div className="p-4 border rounded">
-      <p className="text-xl">Count: {count}</p>
-      <button 
-        onClick={() => setCount(count + 1)}
-        className="px-4 py-2 bg-blue-500 text-white rounded mt-2"
-      >
-        Increment
-      </button>
-    </div>
-  );
-};
-
-export default Counter;
+```txt
+if (brain.isOverthinking()):
+    writeItOut()
 ```
 
-Thanks for reading my first post! Stay tuned for more content coming soon. 
+Long thoughts. Half-finished ideas. Quiet realizations. This is where I reflect on identity, growth, and all the in-betweens.
+
+#### 3. **The Human Side**
+
+Sometimes I’ll write about life, relationships, memories, and the moments that make us feel most alive.
+
+---
+
+## 🔧 Tech Stack (for the nerds)
+
+- **Framework:** Next.js + TailwindCSS  
+- **Markdown engine:** MDX  
+- **Deployed on:** Vercel  
+- **Written by:** A 20-something trying to figure it out
+
+---
+
+### 🐢 Final Word
+
+I’m not here to go viral.  
+I’m here to be real.  
+If something I write resonates, that’s enough.
+
+> _“Live a life worth writing about, so you don’t have to write too much about it.”_
+
+See you in the next post 👇  
+[Start reading here →](#)
