--- a/content/blog/in-between.mdx
+++ b/content/blog/in-between.mdx
@@ -1,7 +1,7 @@
 ---
 title: Somewhere In Between
 date: 04/16/2025
-description: An introduction to my blog and what to expect.
+description: On the duality of being human, and learning to live with balance. For anyone caught between finding peace and chasing more.
 ---
 
 Over the years, I’ve written a lot about life. Maybe too much, but I guess it never runs out of things to say. Some pieces are clear, most are messy. Still, almost all of them revolve around this common theme: the intricate balance I’ve been trying to find.
@@ -25,7 +25,7 @@ the other craves pleasure, power, survival.
 
 The mind is the middle ground and the battlefield. Yo, no wonder it is such a messy place — you probably shouldn’t live there. 
 
-At some point, I stopped trying to simplify the world. It’s the most complex system ever created, and the sooner I let go of my obsession to flatten it into something I could decode, the freer I become. *You’re not meant to figure it all out. You’re meant to live.*
+One day I let go of my obsession to flatten myself into something I could decode. That day I become free. *You’re not meant to figure yourself out completely. You’re meant to live yourself out fully.*
 
 The process of learning to live with that — to believe, to confuse, to fall, to get back up, and to keep walking — is what people call “growing up.” 
 
@@ -33,11 +33,10 @@ Every kid I met wants to grow up.
 Every grown-up I know hated growing up.  
 But at the end of the day we all gotta do it.
 
-So I stopped trying to label everything, react to everything.  
-It’s just life, and we’re all just trying to walk that line — between the part of us that reaches for heaven and the part that’s trying to stay grounded.
+So I stopped trying to label every feeling, judge every impulse, make sense of who I am.  
+We’re all just trying to walk that line — between the part of us that reaches for heaven and the part that’s trying to stay grounded.
 
-❍ ❍ ❍
-
+---
 
 I’m still walking that line. One way forward, no maps.  
 You probably walking it too — that’s why you’re here today.  
