--- a/content/blog/how-i-see-love.mdx
+++ b/content/blog/how-i-see-love.mdx
@@ -1,7 +1,7 @@
 ---
 title: How I See Love
 date: 04/20/2025
-description: between romance movies and dating apps, and why I still choose to believe in something deeper
+description: Caught between romance movies and dating apps, and why I still want to believe in something deeper
 ---
 
 In modern relationships, one of the quiet battles we all face is learning how to live between two popular yet opposing views of love.
@@ -20,6 +20,6 @@ I want to pursue a kind of *absurdist love*. And I’m aware it requires a diffe
 
 It doesn’t rely on blind faith in forever, nor collapse into the cynicism that nothing lasts. It’s a conscious, courageous choice: to love someone fully, even after understanding how fragile we humans are — our doubts, our desires, our sins, our fleetingness. To give your whole heart, knowing it may not always be held.
 
-Loyalty not as a forced obligation born of fear, but an informed decision made in clarity — the shared, deliberate choice to walk through life together with another person. Because even in a world where nothing is promised, we still believe this is the way we want to live.
+Loyalty not as a forced obligation born of fear, but an informed decision made in clarity — the shared, deliberate choice to walk through life together with another person, after fully recognizing their flaws and imperfections. Because even in a world where nothing is promised, we still believe this is the way we want to live.
 
 This is a rare kind of romance. Bringing heaven to earth, and choosing, every day, to protect it with your own hands. Maybe I’m asking too much. Maybe holding onto this standard means I’ll end up alone. I don’t know. But this is how I see love.
