blog posts modified formatting

--- a/content/blog/how-i-see-love.mdx
+++ b/content/blog/how-i-see-love.mdx
@@ -22,4 +22,4 @@ It doesn’t rely on blind faith in forever, nor collapse into the cynicism that
 
 Loyalty not as a forced obligation born of fear, but an informed decision made in clarity — the shared, deliberate choice to walk through life together with another person, after fully recognizing their flaws and imperfections. Because even in a world where nothing is promised, we still believe this is the way we want to live.
 
-This is a rare kind of romance. Bringing heaven to earth, and choosing, every day, to protect it with your own hands. Maybe I’m asking too much. Maybe holding onto this standard means I’ll end up alone. I don’t know. But this is how I see love.
+This is a rare kind of romance. **Bringing heaven to earth, and choosing, every day, to protect it with your own hands.** Maybe I’m asking too much. Maybe holding onto this standard means I’ll end up alone. I don’t know. But this is how I see love.
