--- a/content/blog/trust-only-way-to-win.mdx
+++ b/content/blog/trust-only-way-to-win.mdx
@@ -11,13 +11,12 @@ In game theory, this is called the prisoner’s dilemma. If both players coopera
 
 Because trust makes you vulnerable. It hands someone else a piece of your fate. As strong and capable individuals, you may think: why let anyone else dictate my life? If you trust the wrong person, you really can lose everything.
 
-But the safest path is the one guaranteed to lose. Distrust ensures you’ll never build anything greater than yourself. 
-
+But the safest path is the one guaranteed to lose. **Distrust shields you from pain, and from everything else worth reaching.**  
 Everything beautiful about humanity is born from collaboration: 
 
 Your favorite song didn’t come from one artist. It took writers, producers, musicians, engineers — people trusting each other’s instincts, knowing full well that one person might take all the credit (and it happens all the time in the music industry). The phone in your hand is the result of thousands across continents working on screens, chips, code, and supply chains. Same with your favorite show. The car you drive. The hospitals, schools, and cities we rely on — all function because, despite the good, the bad, and the ugly, people still choose to build together.
 
-And beyond the tangible, there are the things that shape us most. The friendships that healed you, the love that changed you, the rights you live under — only exist because someone, at some point, decided to trust. The Constitution that shaped the most powerful nation in history was built on a single, daring idea: that strangers could be trusted with freedom. Everything beautiful about life is built not by guarding what’s yours, but by risking something with someone else. You don’t need to believe in fairy tales to believe in trust. Just look around. Trust is how humanity moves forward.
+And beyond the tangible, there are the things that shape us most. The friendships that healed you, the love that changed you, the rights you live under — only exist because someone, at some point, decided to trust. The Constitution that shaped the most powerful nation in history was built on a single, daring idea: that strangers could be trusted with freedom. **Everything beautiful about life is built not by guarding what’s yours, but by risking something with someone else.** You don’t need to believe in fairy tales to believe in trust. Just look around. Trust is how humanity moves forward.
 
 ---
 
