fix: blog post name

--- a/content/blog/monopoly.mdx
+++ b/content/blog/monopoly.mdx
@@ -1,5 +1,5 @@
 ---
-title: Monopoly: The Freedom to Be Good
+title: "Monopoly: The Freedom to Be Good"
 date: 06/04/2025
 description: I’m an idealist. But ideals are expensive, only winners afford them.
 ---
