--- a/content/blog/monopoly.mdx
+++ b/content/blog/monopoly.mdx
@@ -14,7 +14,7 @@ Now look at Google. For 20 years, its core business (search) has seen no serious
 
 Economists often view monopolies as villains. But paradoxically, it's precisely this abundance that enables a company — or a person — to be good. **(2)**
 
-Last week, my friend scratched my car mirror while practicing for her driving test. She immediately offered to pay for the fix, as well as my next maintenance. I was thinking, "Damn, that's nice." Then the deeper thought came: I want my kids to leave that kind of impression on people too, which means I cannot afford to be broke.
+Last week, my friend scratched my car while practicing for her driving test. She immediately offered to pay for the fix, as well as my next maintenance. I was thinking, "Damn, that's nice." Then the deeper thought came: I want my kids to leave that kind of impression on people too, which means I cannot afford to be broke.
 
 I handled it quite well too. I told her not to worry, it’s not her fault at all. But if I were living paycheck to paycheck, stressed about work, with a scratched car on top of all that, I might have "crashed out." Still the same me, but a survival mindset would leave very little space for grace.
 
