--- a/content/blog/competition-creation.mdx
+++ b/content/blog/competition-creation.mdx
@@ -27,11 +27,11 @@ In the first two years of college, I was quite lost in the pursuit of getting in
 
 As a kid, I was told I have to get into the best high schools. Then in high school, I thought getting into the best colleges would mean I’m set for life. In college, the goal shifted to a job offer. Then it will be promotions and avoiding layoffs. There’s also this other game called dating that my fellow young men are getting into as well, and that game seems even more tiring. 
 
-Years later I’m still benefitting from the math training I did. When I prepped for quant interviews I could solve those dice and card problems faster than my friends. They’d say “dude you are cracked!” Then I did a Jane Street interview. The ladder never ends, they expected 5 minutes and I took 10. I always couldn’t move past some rounds in these interviews. So I gave up on quant.
+Years later I’m still benefitting from the math training I did. When I prepped for quant interviews I could solve those dice and card problems faster than my friends. They’d say “dude you are cracked!” Then I did a Jane Street interview. The ladder never ends, they expected 5 minutes and I took 10. I just couldn’t move past some rounds in these interviews, eventually I gave up on quant.
 
 I sometimes think us math kids are like **seals doing tricks**. You give the seal a ball, it balances it on its nose. Some can get the ball bouncing — what a talented kid! He gets the applause and the treat. Other seals watch in admiration or envy: “dude he’s so cracked.”
 
-You know how I always talk about the **[god vs beast](https://haoji.wang/blog/in-between)** conflict ****in humans. Peter Thiel’s view of competition vs creation struck me the same. Competition is inherently animalistic. It distributes resources, it doesn’t create them. Two tribes fighting for food or land: the food and land already exist, but you gotta win it from someone else. Winning is essential to survival, but it doesn’t move civilizations forward. The God side shows up when humanity takes effort to create what wasn’t there before. That’s what separates us from animals. 
+You know how I always talk about the **[god vs beast](https://haoji.wang/blog/in-between)** conflict in humans. Peter Thiel’s view of competition vs creation struck me the same. Competition is inherently animalistic. It distributes resources, it doesn’t create them. Two tribes fighting for food or land: the food and land already exist, but you gotta win it from someone else. Winning is essential to survival, but it doesn’t move civilizations forward. The God side shows up when humanity takes effort to create what wasn’t there before. That’s what separates us from animals. 
 
 But that is not to say competition is by any means lesser than creation. In fact, [the luxury to not worry about survival](https://haoji.wang/blog/monopoly) — often from having won previous competitions — is the foundation of transcendence. In the context of tech, you should probably still try to land a good job offer first, so you can eventually build your own startup from a place of abundance, not desperation. 
 
