--- a/content/blog/competition-creation.mdx
+++ b/content/blog/competition-creation.mdx
@@ -1,10 +1,10 @@
 ---
 title: From Competition to Creation
 date: 06/28/2025
-description: this one is pretty long. a personal reflection on escaping the loop of endless competition, and choosing to create something that outlives us.
+description: this one is pretty long. on escaping the loop of endless competition, and choosing to create something that outlives us.
 ---
 
-### **The Game of Being Chosen**
+### The Game of Being Chosen
 
 This essay is inspired by the Chapter 4 of *Zero to One*. But before we dive into Peter Thiel again, I want to briefly share how I started and stopped doing math competitions.
 
