reformat new blog post

--- a/content/blog/fame-and-respect.mdx
+++ b/content/blog/fame-and-respect.mdx
@@ -1,7 +1,7 @@
 ---
-title: From Competition to Creation
-date: 06/28/2025
-description: this one is pretty long. on escaping the loop of endless competition, and choosing to create something that outlives us.
+title: Fame and Respect
+date: 09/07/2025
+description: SF gen-z startups, engagement farming, and the balance between hype and substance.
 ---
 
 Two months in the Bay, I’ve noticed a strange yet obvious trend: a lot of founders started companies because they wanted to be celebrities. Understandable, ambitious people often crave the spotlight. But the result is a huge number of startups in SF chasing clout above substance. 
@@ -27,14 +27,13 @@ Elon Musk has jumped on this trend too — check the latest XAI companion:
 <Video 
   src="/videos/xai-badrudi.mp4" 
   caption="XAI introduced this avatar called Bad Rudi, and this panda is proper weird" 
-  width={600}
-  height={400}
+  width={200}
+  height={300}
   autoplay={false}
-  loop={true}
-  muted={true}
+  loop={false}
+  muted={false}
+  className="max-w-md mx-auto"
 />
-
----
 
 Engagement farming has become the unquestionable golden rule. I know another startup’s launch video that starts with a guy “gooning” (jerking off) in his bed, and that went viral too.
 
