reformat blog post again

--- a/content/blog/fame-and-respect.mdx
+++ b/content/blog/fame-and-respect.mdx
@@ -14,7 +14,7 @@ Among young AI founders in SF, I see a default “viral formula” forming. Rece
 
 ---
 
-Cluely posted a video a while ago: an AI-generated clip featuring a reporter asking a five-year-old kid at his desk:
+[Cluely posted a video](https://www.instagram.com/reel/DNUCWNWS6mi/?utm_source=ig_web_copy_link&igsh=MW41NGVwY3o0NXFzYQ==) a while ago: an AI-generated clip featuring a reporter asking a five-year-old kid at his desk:
 
 **Reporter:** “Are you just pretending to work?”
 
